# libvmaf-rs

./: Cargo.toml  libvmaf-rs.code-workspace  readme.md
.devcontainer/: devcontainer.json
examples/: get_vmaf_scores.rs  vmaf_v0.6.1.json
scripts/: install-dependencies.sh
src/: error.rs  lib.rs  model.rs  picture.rs  scoring.rs  utils.rs  video.rs  vmaf.rs
src/model/: config.rs  error.rs
src/picture/: error.rs  resolution.rs
src/picture/resolution/: error.rs
src/scoring/: config.rs  error.rs  model.rs
src/video/: error.rs  resolution.rs
src/vmaf/: error.rs  ffi.rs  old.rs  status.rs
video/: Big Buck Bunny 720P.m4v
