[package]
name = "libvmaf-rs"
license = "GPL-3.0-or-later"
description = "(WIP) Ergonomic bindings for Netflix's libvmaf"
version = "0.4.0"
readme = "readme.md"
edition = "2021"
authors = ["Brandon Piña"]
repository = "https://github.com/ThatNerdUKnow/libvmaf-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"libvmaf-sys" = { version = "0.4.0" }
"errno" = "0.2.8"
"libc" = "0.2.137"
ffmpeg-next = { version = "6.0.0", optional = true }
num_cpus = "1.14.0"
thiserror = "1.0.37"
error-stack = { version = "0.2.4", features = ["anyhow"] }
ptrplus = "2.1.0"

[dev-dependencies]
indicatif = "0.17.3"

[profile.release]
lto = true

[features]
default = ["ffmpeg"]
ffmpeg = ["dep:ffmpeg-next"]
float = ["libvmaf-sys/float"]
avx512 = ["libvmaf-sys/avx512"]
ffmpeg-build = ["ffmpeg-next/build", "ffmpeg"]
ffmpeg-static = ["ffmpeg-next/static", "ffmpeg"]
